update to java21 (VirtualThread)